@@ -5,18 +5,24 @@ import xyz.zedler.patrick.grocy.util.LocaleUtil;
 public class Language {
 
     private final String code;
+    private final String demoDomain;
     private final String translators;
     private final String name;
 
     public Language(String codeAndTranslators) {
         String[] parts = codeAndTranslators.split("\n");
         code = parts[0];
-        translators = parts[1];
+        demoDomain = parts[1];
+        translators = parts[2];
         name = LocaleUtil.getLocaleFromCode(code).getDisplayName(LocaleUtil.getDeviceLocale());
     }
 
     public String getCode() {
         return code;
+    }
+
+    public String getDemoDomain() {
+        return demoDomain;
     }
 
     public String getTranslators() {
